# Local_Merge

./: .gitignore  README.md  pyproject.toml
evaluation/: humaneval_eval.py  mmlu_eval.py  run_eval.py  truthfulqa_eval.py  winogrande_eval.py
methods/: crop_splice.py  gen_task_mask.py  replace  run_command.py  slerp.py  ties.py  utility.py
notebooks/: merge_test.ipynb
scripts/: LASSO_interpretaility.ipynb
src/: crop_splice.py  gen_task_mask.py  replace_merge.py  run_command.py  slerp.py  task_arithmetic.py  ties.py  utility.py
