[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "merge"
description = "Scratch Implementation of Model Merging"
readme = "README.md"
license = { text = "LGPL-3.0-or-later" }
version = "0.0.0.1"
authors = [{ name = "Yedi Hu", email = "yedihu.pub@gmail.com" }]
dependencies = [
    "transformers>=4.37.2",
    "click>=8.1.7",
    "torch>=2.6.0",
    "numpy>=2.0.0,<3.0.0",
    "tqdm>=4.66.1",
    "datasets>=2.16.1",
    "bitsandbytes>=0.45.1",
]

[project.urls]
repository = "https://github.com/PotatoBearP/Merge_from_Scratch"


[project.scripts]
slerp_merge = "src.run_command:slerp_merge"
replace_merge = "src.run_command:replace_merge"
splice = "src.run_command:splice"
crop = "src.run_command:crop"
generate_mask = "src.run_command:generate_mask"
evaluate = "src.run_command:evaluate"

[tool.setuptools]
packages = [
    "src",
]